fixing alignment

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
   background-color: hsl(212, 45%, 89%);
   font-size: 0.95rem;
   font-family: "Outfit", sans-serif;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 img {
   max-width: 100%;
@@ -23,6 +27,9 @@ img {
   border-radius: 20px;
 }
 
+.main {
+  display: flex;
+}
 .qr__img {
   border-radius: 15px;
 }
